placeholder 기능 및 guide 일부 스타일

--- a/style/default_component.css
+++ b/style/default_component.css
@@ -124,7 +124,7 @@
 /*
  * 기본
  */
-.icon { display:inline-block; text-align:left; text-indent:-9999%; }
+.icon { display:inline-block; text-align:left; text-indent:-9999%; overflow:hidden; }
 
 
 /*
