--- a/guide/style.css
+++ b/guide/style.css
@@ -1,5 +1,12 @@
 @charset 'utf-8';
 
+.guide_lnb { position:absolute; top:0; left:0; width:170px; padding:20px 15px; }
+.guide_lnb ul { margin-bottom:10px; padding-bottom:10px; border-bottom:1px solid #ddd; }
+.guide_lnb a { display:block; padding:10px 5px; font-size:16px; }
+.guide_lnb a:hover { background:#ddd; }
+.guide_body { margin-left:200px; }
+.guide_window { width:100%; height:100%; border:0px; }
+
 .guide_wrap { margin:20px; }
 
 .guide_h1 { font-size:24px; margin-top:30px; margin-bottom:10px; padding-bottom:20px; border-bottom:1px solid #ddd; }
